# FinalProject-Old-

./: .gitmodules
moveit2_scripts/: CMakeLists.txt
moveit2_scripts/launch/: current_pose.launch.py
moveit2_scripts/src/: current_pose.cpp  pick_and_place.cpp  pick_and_place_perception.cpp
my_moveit_config/: .setup_assistant  package.xml
my_moveit_config/config/: moveit_controllers.yaml  name.srdf
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: name.srdf
web_interface/: CMakeLists.txt  package.xml
web_interface/launch/: tf2_web_republisher_launch.py  web_setup.launch.py
